--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 #root {
-    margin: 0 auto;
-  }
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+footer {
+  margin-top: auto;
+}
